--- a/src/style.scss
+++ b/src/style.scss
@@ -10,18 +10,103 @@ $Pink: rgb(242, 196, 196);
 $Blue: rgb(29, 108, 147);
 $Grey: rgb(240, 240, 240);
 
-h1 {
-  color: $Red;
+$CalendarIconSize: 50px;
+
+*{
+  box-sizing: border-box;
 }
 
-.cooper {
-  font-family: 'Cooper Hewitt', sans-serif;
+body{
+  margin: 0;
 }
 
-.press-reg {
-  font-family: 'GT Pressura', sans-serif;
+h1, p {
+  color: $Blue;
 }
 
-.press-mon {
-  font-family: 'GT Pressura Mono', monospace;
+
+.delivery{
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  margin: auto;
+
+  h1 {
+    font-size: 28px;
+    font-family: 'Cooper Hewitt';
+  }
+
+  .free-delivery{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background: lighten($Blue, 60%);
+    border-bottom: 2px solid #ccc;
+
+    .van {
+      margin: 0 10px;
+
+      img {
+        width: 25px;
+      }
+    }
+
+    p {
+      width: auto;
+      margin: 0;
+      font-family: sans-serif;
+      font-size: 20px;
+      padding: 10px 0;
+
+    }
+  }
+
+  .delivery-date{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border-bottom: 2px solid #ccc;
+
+    .calendar {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 100%;
+      margin-right: 10px;
+      width: $CalendarIconSize;
+      height: $CalendarIconSize;
+      background: lighten($Blue, 60%);
+
+      p {
+        position: absolute;
+        background: #fff;
+        transform: translate(0px, -14px);
+        width: 30px;
+        height: 26px;
+        z-index: 1;
+        text-align: right;
+        font-size: 16px;
+        padding-top: 6px;
+        padding-right: 3px;
+      }
+
+      img {
+        width: 30px;
+        z-index: 2;
+      }
+    }
+
+    p {
+      font-family: 'GT Pressura Mono', monospace;
+      font-size: 20px;
+    }
+
+    a {
+      color: $Blue;
+      background: lighten($Blue, 60%);
+      font-family: 'GT Pressura', sans-serif;
+      margin-left: auto;
+      padding: 4px 8px;
+    }
+  }
 }
