Contents and layout of modal calendar complete.

--- a/src/style.scss
+++ b/src/style.scss
@@ -129,11 +129,15 @@ h1, p {
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition: opacity 0.5s ease;
+  transition: opacity 0.2s ease;
   z-index: 2;
 
   &.displayed {
     opacity: 1;
+
+    .modal-calendar {
+      transform: scale(1);
+    }
   }
 
   .modal-background {
@@ -145,9 +149,31 @@ h1, p {
   .modal-calendar {
     position: absolute;
     width: 40%;
-    height: 30%;
     background: #fff;
     z-index: 3;
+    transition: transform 0.5s ease;
+    transform: scale(0);
+
+    h2 {
+      font-family: 'Cooper Hewitt', sans-serif;
+      font-size: 18px;
+      text-align: center;
+      color: $Blue;
+    }
+
+    .days {
+      display: flex;
+      width: 90%;
+      margin: auto;
+      justify-content: space-between;
+      height: 40px;
+
+      p {
+        width: calc(100%/7);
+        text-align: center;
+        font-family: 'GT Pressura Mono', monospace;
+      }
+    }
 
     .dates {
       display: flex;
@@ -191,6 +217,21 @@ h1, p {
           position: absolute;
         }
       }
+    }
+
+    .button {
+      font-family: 'Cooper Hewitt', sans-serif;
+      font-size: 14px;
+      color: $Blue;
+      width: 120px;
+      border: 1px solid $Blue;
+      border-radius: 3px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 25px auto;
+      box-shadow: 1px 1px 4px 1px #777;
     }
   }
 }
