--- a/src/style.scss
+++ b/src/style.scss
@@ -41,6 +41,8 @@ h1, p {
     font-family: 'Cooper Hewitt', sans-serif;
   }
 
+  // TOP ROW
+
   .free-delivery{
     display: flex;
     align-items: center;
@@ -65,6 +67,8 @@ h1, p {
 
     }
   }
+
+  // BOTTOM ROW
 
   .delivery-date{
     display: flex;
@@ -146,6 +150,8 @@ h1, p {
     background: #444;
   }
 
+
+  // MODAL CONTENT
   .modal-calendar {
     position: absolute;
     width: 40%;
@@ -215,6 +221,7 @@ h1, p {
 
         .date-num {
           position: absolute;
+          pointer-events: none;
         }
       }
     }
